[package]
name = "bevy-cross-compile-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.6"


# build for macOS does still not work!
# CC=o64-clang CXX=o64-clang++ LIBZ_SYS_STATIC=1 PATH="/home/camillo/workspace/macOS/osxcross/target/bin:$PATH" cargo build --target x86_64-apple-darwin --release

# build for windows
# cargo build --target=x86_64-pc-windows-gnu --release
